Styling components to correct alignment & sizing

--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -7,8 +7,11 @@
 
 /* Element Styling */
 
+/* Contact Form */
+
 .contact-form {
     padding-left: 0;
+    margin-left: 0;
 }
 
 .contact-form-field {
@@ -22,8 +25,7 @@
     margin-bottom: 25px;
 }
 
-.contact-details {
-}
+/* Image */
 
 .contact-artist-image {
     padding-top: 10px;
@@ -37,6 +39,19 @@
     padding-right: 0px;
 }
 
+/* Contact Details */
+
+.contact-phone-row {
+    padding-bottom: 10px;
+}
+
+.contact-details-icon {
+    margin-right: 10px;
+    width: 1em;
+}
+
+/* Map */
+
 .contact-details-map {
     text-align: center;
     padding: 0px;
@@ -44,9 +59,4 @@
 
 .contact-details-map iframe {
     width: 100%;
-}
-
-.contact-details-icon {
-    margin-right: 10px;
-    width: 1em;
 }
